--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/typeorm-legacy-adapter": "^1.0.3",
+    "dotenv-safe": "^8.2.0",
     "next": "12.1.6",
+    "next-auth": "^4.5.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
