--- a/package.json
+++ b/package.json
@@ -10,17 +10,28 @@
   },
   "dependencies": {
     "@next-auth/typeorm-legacy-adapter": "^1.0.3",
+    "apollo-server-micro": "^3.9.0",
     "axios": "^0.27.2",
     "dotenv-safe": "^8.2.0",
+    "graphql": "^15.3.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
+    "pg": "^8.7.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/micro": "^7.3.7",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
