--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/typeorm-legacy-adapter": "^1.0.3",
     "apollo-server-micro": "^3.9.0",
     "axios": "^0.27.2",
+    "class-validator": "^0.13.2",
     "dotenv-safe": "^8.2.0",
     "graphql": "^15.3.0",
     "micro": "^9.3.4",
@@ -31,6 +32,7 @@
     "@types/node": "17.0.42",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/validator": "^13.7.3",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
