--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@next-auth/typeorm-legacy-adapter": "^1.0.3",
@@ -24,9 +25,14 @@
     "react-dom": "18.1.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "urql": "^2.2.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.7.0",
+    "@graphql-codegen/typescript": "2.6.0",
+    "@graphql-codegen/typescript-operations": "2.4.3",
+    "@graphql-codegen/typescript-urql": "^3.5.13",
     "@types/micro": "^7.3.7",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.42",
