admin pages start, edit post done

--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@next-auth/typeorm-legacy-adapter": "^1.0.3",
+    "@urql/exchange-graphcache": "^4.4.3",
     "apollo-server-micro": "^3.9.0",
     "axios": "^0.27.2",
     "class-validator": "^0.13.2",
+    "dayjs": "^1.11.3",
     "dotenv-safe": "^8.2.0",
+    "easymde": "^2.16.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.16",
     "graphql": "^15.3.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
@@ -23,6 +32,7 @@
     "pg": "^8.7.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-simplemde-editor": "^5.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.6",
