--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "18.1.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3",
     "react-simplemde-editor": "^5.0.2",
     "reflect-metadata": "^0.1.13",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.5",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.6",
