--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.pnp
 .pnp.js
 
+/google-service-key.json
+
 # testing
 /coverage
 
@@ -33,3 +35,5 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+galleryInfo.json
