--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "graphql": "^15.3.0",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "12.1.6",
+    "next": "^12.2.2",
     "next-auth": "^4.5.0",
     "pg": "^8.7.3",
     "react": "18.1.0",
