--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fullcalendar/core": "^5.11.0",
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
     "@next-auth/typeorm-legacy-adapter": "^1.0.3",
     "@urql/exchange-graphcache": "^4.4.3",
     "apollo-server-micro": "^3.9.0",
@@ -32,6 +36,7 @@
     "micro-cors": "^0.1.1",
     "next": "^12.2.2",
     "next-auth": "^4.5.0",
+    "next-transpile-modules": "^9.0.0",
     "pg": "^8.7.3",
     "react": "18.1.0",
     "react-data-table-component": "^7.5.2",
