--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.1.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.1.0",
+    "react-images": "1.1.0",
     "react-markdown": "^8.0.3",
     "react-photo-gallery": "^8.0.0",
     "react-simplemde-editor": "^5.0.2",
