--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "graphql-codegen --config codegen.yml"
+    "gen": "graphql-codegen --config codegen.yml",
+    "typeorm": "typeorm-ts-node-esm"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
@@ -66,6 +67,7 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.3"
   }
 }
