--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "gen": "graphql-codegen --config codegen.yml",
-    "typeorm": "npx typeorm-ts-node-commonjs --dataSource lib/TypeORM.ts"
+    "typeorm": "npx typeorm-ts-node-esm --dataSource lib/TypeORM.ts"
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
